force-app/main/default/objects/SSR_Slack_Settings__c/SSR_Slack_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Paramètres globaux SSR Slack (Bot Token xoxb-...). À renseigner dans Setup après déploiement.</description>
    <label>SSR Slack Settings</label>
</CustomObject>