force-app/main/default/objects/SSR_Slack_Settings__c/fields/Bot_Token__c.field-meta.xml
<CustomField>
    <fullName>Bot_Token__c</fullName>
    <description>Slack Bot User OAuth Token (xoxb-...). Ne jamais commiter cette valeur.</description>
    <label>Bot Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>