force-app/main/default/objects/SSR_Slack_Settings__c/fields/Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_Retention_Days__c</fullName>
    <description>Nombre de jours de conservation des SSR_Log__c avant purge par SSRLogPurgeSchedulable. Vide = 30.</description>
    <label>Log Retention (days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>