force-app/main/default/objects/SSR_Slack_Settings__c/fields/OpenAI_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>OpenAI_Api_Key__c</fullName>
    <description>Optional OpenAI API key for SSR Recipe 08 (case AI summary). Leave blank for rule-based fallback.</description>
    <label>OpenAI API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>